src/test/contracts/negative/opt_out_dynamic_entrypoints.jsligo
type storage =
  {
    storage : int;
    dynamic_entrypoints;
  }

const two = (_u1: unit, _u2: unit) : [list<operation>, unit] => {
  let _i = 1;
  (External `OPT_OUT_ENTRY`)
}

@entry
const nope = (_u: unit, _storage: storage) : [list<operation>, storage] => failwith ()
